--- a/src/Styles/Nossatuacao.css
+++ b/src/Styles/Nossatuacao.css
@@ -6,14 +6,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .BotoesBox{
-    background-color: #799fb1;
+    background-image: linear-gradient(to right, #3a7c99,#0e455f);
 }
 .BotoesBox h1{
     text-align: center;
     padding: 30px;
     font-family: "Bebas Neue", serif;
     color: whitesmoke;
-    font-size: 5em;
+    font-size: 6em;
     text-shadow: rgba(0, 0, 0, 0.568) 2px 2px 2px;
     letter-spacing: 2px;
 }
@@ -21,7 +21,6 @@
     font-family: "roboto" ;
     color: whitesmoke;
     text-align: center;
-    font-size: 1em;
     padding: 15px;
     text-shadow: rgba(0, 0, 0, 0.158) 2px 2px 2px;
 }
@@ -35,7 +34,7 @@
 .Boxbuttonsdisplay button{
     margin-left: 70px;
     margin-right: 70px;
-    border-radius: 20%;
+    border-radius: 10%;
     padding: 50px;
     font-size: 1.5em;
     cursor: pointer;
@@ -47,6 +46,25 @@
     background-color: #83853c;
     color: whitesmoke;
 }
+.Boxbuttonsdisplay button.active {
+    position: relative; /* Necessário para posicionar a seta */
+    background-color: #83853c;
+    color: whitesmoke;
+}
+
+.Boxbuttonsdisplay button.active::after {
+    content: "";
+    position: absolute;
+    bottom: -15px; /* Ajuste conforme necessário */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 50px solid #83853c; /* Cor da seta */
+}
+
 
 /* ESTILOS DO MUNHOZ JUNIOR */
 .backgroundbox{
