--- a/src/Styles/Ondenosencontrar.css
+++ b/src/Styles/Ondenosencontrar.css
@@ -6,17 +6,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
-.Backgroundlugares{
-    background-image: linear-gradient(to right, #488daa,#93adb9, #0e455f);
-}
 .ondenosencontrartitle{
     text-align: center;
-    padding: 40px;
+    padding: 10px;
     color: whitesmoke;
     font-family: "Bebas Neue", serif;
     font-size: 4em;
     letter-spacing: 5px;
-    text-shadow: rgba(0, 0, 0, 0.568) 2px 2px 2px;
+    text-shadow: rgba(0, 0, 0, 0.822) 2px 2px 2px;
 }
 .Boxlugares{
     display: flex;
@@ -30,7 +27,7 @@
     padding: 20px;
 }
 .ContainerLugares h2{
-    background-color: #094c69;
+    background-color: #333677;
     color: white;
     padding: 10px;
     width: 74%;
@@ -38,13 +35,14 @@
     text-align: center;
     font-size: 15px;
     border-radius: 10% 10% 0% 0%;
+    text-shadow: rgba(0, 0, 0, 0.568) 2px 2px 2px;
 }
 .ContainerLugares p{
     background-color: whitesmoke;
     padding: 10px;
     width: 74%;
     margin: 0px;
-    color: #05222e;;
+    color: #000000;
     font-family: "Roboto";
     font-size: 1em;
     text-align: center;
