--- a/src/Styles/Nossatuacao.css
+++ b/src/Styles/Nossatuacao.css
@@ -4,9 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-.BotoesBox{
-    background-image: linear-gradient(to right, #3a7c99,#0e455f);
+main{
+    background-image: url(../Assets/testefundocolorido.jpg);
+    background-position: top;
+    background-size: cover;
 }
 .BotoesBox h1{
     text-align: center;
@@ -19,10 +20,11 @@
 }
 .BotoesBox p{
     font-family: "roboto" ;
+    font-size: 2em;
     color: whitesmoke;
     text-align: center;
     padding: 15px;
-    text-shadow: rgba(0, 0, 0, 0.158) 2px 2px 2px;
+    text-shadow: rgba(0, 0, 0, 0.712) 2px 2px 2px;
 }
 .Boxbuttonsdisplay{
     display: flex;
@@ -39,8 +41,8 @@
     font-size: 1.5em;
     cursor: pointer;
     font-family: "Bebas Neue", serif;
-    color: #233d49;
-    background-color: #d6d85d;
+    color: whitesmoke;
+    background-color: #333677;
 }
 .Boxbuttonsdisplay button:hover{
     background-color: #83853c;
@@ -55,10 +57,10 @@
 .Boxbuttonsdisplay button.active::after {
     content: "";
     position: absolute;
-    bottom: -15px; /* Ajuste conforme necessário */
+    bottom: -40px; /* Ajuste conforme necessário */
     left: 50%;
     transform: translateX(-50%);
-    width: 0;
+    width: 50px;
     height: 0;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
