--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,46 +1,45 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 *{
     margin: 0;
+    scroll-behavior: smooth;
 }
-.BarraDeNavegacao{
-    background-color: #f0605b;
+:root{
+    --azulnavbar: #232f50;
+    --azulnavbarhover: #121829;
+}
+.navbarbox{
     display: flex;
     align-items: center;
-    position: fixed;
-    border-radius: 0px 20px 50px 0px;
+    background-color: whitesmoke;
 }
-.LogoCedeca img{
-    width: 50px;
-    padding-left: 20px;
-    padding: none;
-    margin-right: 15px;
+.logocedecanav img{
+    width: 200px;
 }
-.ItensNav{
-}
-.ItensNav a{
-    padding: 20px;
+.navbarItens a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
-    font-family: "Roboto";
-    font-size: 14px;
     text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.527) 8px 8px 15px;
-}
-
-
-.ItensNav a:hover{
-    background-color: #37687e54;
+    padding: 30px;
+    color: var(--azulnavbar);
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
     font-size: 15px;
+    position: relative;
+    transition: all 0.80s ease;
+}
+.navbarItens a::after{
+    content: " - ";
 }
 
-.quemsomosnav{
-    background-color: #7bb0c7;
+.navbarItens a:hover{
+    text-decoration: dashed;
+    color: var(--azulnavbarhover);
+    text-shadow: #1218290a 1px 1px 2px;
+    background-color: rgba(156, 156, 156, 0.267);
 }
-.ondenosencontrarnav{
-    background-color: #EBD167 ;
-}
-.nossaatuacaonav{
-    background-color: #676BEB;
+.navbarItens a:hover::after{
+    content: "  v";
+    font-weight: 500;
 }
