--- a/src/Styles/Quemsomos.css
+++ b/src/Styles/Quemsomos.css
@@ -1,45 +1,32 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
-    margin: 0;
+:root{
+--fonttitulo : "Bebas Neue", serif;
+--textfont : "Noto Sans", sans-serif;
 }
-.QuemSomosBox{
+.Quemsomosbox{
     display: flex;
+    text-align: center;
     align-items: center;
-    padding: 20px;
-    background-image: url(../Assets/Fundoazulteste.jpeg);
-    background-size: cover;
-    background-position: top bottom;
     justify-content: center;
+    padding: 30px;
 }
-
-.Textoquemsomos h1{
-    font-family: "Bebas Neue", serif;
-    letter-spacing: 5px;
+.Quemsomosbox h2{
+    font-family: var(--fonttitulo);
+    font-size: 5em;
+    padding: 40px;
+    color: #0e121f;
+    font-weight: 100;
+}
+.Quemsomosbox p{
+    text-align: justify;
+    font-size: 14px;
     color: whitesmoke;
-    padding: 10px;
-    font-size: 4em;
-    text-align: justify;
-}
-.Textoquemsomos p{
+    background-color: #232f50be;
     padding: 20px;
-    line-height: 30px;
-    font-family: "Roboto";
-    font-size: 15px;
-    color: white;
-    text-align: justify;
-}
-.Backgroundazul{
-    background-color: #415f70;
-    border-radius: 5%;
-}
-.imgquemsomos{
-    padding: 10px;
-}
-.imgquemsomos img{
-    border: solid whitesmoke 2px;
-    border-radius: 30%;
+    font-family: var(--textfont);
+    line-height: 40px;
+    border-radius: 20px;
 }
