--- a/src/Styles/pageDoe.css
+++ b/src/Styles/pageDoe.css
@@ -34,6 +34,9 @@
     text-align: center;
     text-align: justify;
 }
+
+/*Segundo box*/
+
 .pintroDoe{
     background-color: whitesmoke;
     text-align: center;
@@ -80,4 +83,87 @@
     font-weight: 400;
     padding: 2px;
 }
+.doacaobox:hover{
+    transform: scale(1.10);
+    cursor: pointer;
+}
 
+/* terceiro box */
+
+.doacoes567box{
+    display: flex;
+    gap: 90px;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+    padding: 50px;
+    padding-bottom: 70px;
+}
+.doacoes567box div:hover{
+    transform: scale(1.10);
+    cursor: pointer;
+}
+.doacoes567boxcontent{
+    background-color: whitesmoke;
+    padding: 30px;
+    border: solid #12182965 1px;
+    text-align: center;
+    box-shadow: #141b2e25 15px 25px 5px;
+}
+.doacoes567boxcontent h3{
+    font-family: var(--fontTitle);
+    font-weight: 500;
+    color: #121829;
+    padding: 10px;
+}
+.doacoes567boxcontent p{
+    text-align: justify;
+    font-family: var(--fontTitle);
+    color: #141b2e;
+}
+
+/*quarto box*/
+.contatosbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #121829;
+    padding: 50px;
+    gap: 80px;
+}
+.contatosbox h3{
+    color: whitesmoke;
+    padding: 20px;
+    font-family: var(--fontTitle);
+    font-size: 3em;
+    letter-spacing: 20px;
+    font-weight: 200;
+}
+.contatosbox p{
+    color: whitesmoke;
+    font-weight: 200;
+    padding: 20px;
+    font-family: var(--fontTitle);
+    font-size: 2em;
+}
+
+/*quinto box*/
+.gratidaobox{
+    text-align: center;
+    padding: 40px;
+    background-color: whitesmoke;
+}
+.gratidaobox h3{
+    font-family: var(--fontTitle);
+    font-size: 4em;
+    color: #121829;
+    padding: 20px;
+}
+.gratidaobox p{
+    text-align: center;
+    padding: 20px;
+    font-family: var(--fontTitle);
+    color: #0a0d16;
+    font-size: 19px;
+}
